--- a/index.html
+++ b/index.html
@@ -101,16 +101,13 @@
         </div>
     </footer>
 
-    <div id="modal" class="modal hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center">
+    <div id="modal" class="modal hidden font-bold fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center">
         <div class="modal-content bg-white p-8 rounded-lg max-w-2xl w-full">
             <span class="close float-right text-2xl cursor-pointer">&times;</span>
             <div id="pet-details"></div>
         </div>
     </div>
 
-    <div id="loading" class="loading hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center">
-        <div class="spinner"></div>
-    </div>
 
     <script src="script.js"></script>
 </body>
